# HandObjectInteractionIJCV16_GroundTruthViewer

./: CMakeLists.txt  README.md
config/: config.ini
include/: customlabel.h  viewer.h
src/: customlabel.cpp  main.cpp  viewer.cpp  viewer_error.cpp  viewer_gui.cpp  viewer_input_callback.cpp  viewer_path.cpp  viewer_read.cpp  viewer_update.cpp
ui/: mainwindow.ui
